--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>shoes</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!--header-->
+    <!--fine header-->
+
+    <!--main-->
+    <main class="container">
+        <!--sezione rossa-->
+        <section>
+            <div class="centered">
+                <img src="img/01.png" alt="img01">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </section>
+        <!--fine sezione rossa-->
+
+        <!--sezione verde-->
+        <section>
+            <div class="centered">
+                <img src="img/01.png" alt="img01">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </section>
+        <!--fine sezione verde-->
+
+        <!--sezione gialla-->
+        <section>
+            <div class="centered">
+                <img src="img/01.png" alt="img01">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </section>
+        <!--fine sezione gialla-->
+    </main>
+
+    <!--fine main-->
     
 </body>
 </html>
