--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--main-->
     <main class="container">
         <!--sezione rossa-->
-        <section>
+        <section id="rosso">
             <div class="centered">
                 <img src="img/01.png" alt="img01">
                 <h2>il nostro modello di punta</h2>
@@ -26,18 +26,18 @@
         <!--fine sezione rossa-->
 
         <!--sezione verde-->
-        <section>
+        <section id="verde">
             <div class="centered">
-                <img src="img/01.png" alt="img01">
+                <img src="img/02.png" alt="img01">
                 <h2>il nostro modello di punta</h2>
             </div>
         </section>
         <!--fine sezione verde-->
 
         <!--sezione gialla-->
-        <section>
+        <section id="giallo">
             <div class="centered">
-                <img src="img/01.png" alt="img01">
+                <img src="img/03.png" alt="img01">
                 <h2>il nostro modello di punta</h2>
             </div>
         </section>
