modifiche colori scritte e sfondi

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="giallo">
             <div class="centered">
                 <img src="img/03.png" alt="img01">
-                <h2>il nostro modello di punta</h2>
+                <h2><span>il nostro modello di punta</span></h2>
             </div>
         </section>
         <!--fine sezione gialla-->
