--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
     <!--header-->
+    <header>
+        <ul class="fixed">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
+    </header>
     <!--fine header-->
 
     <!--main-->
