--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <main class="container">
         <!--sezione rossa-->
         <section id="rosso">
+            <ul class="fixed">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
             <div class="centered">
                 <img src="img/01.png" alt="img01">
                 <h2>il nostro modello di punta</h2>
